         sound/aosound.c,ui/{gtk/{options.pl,roms.c},scaler/scaler.c,widget/
         {filesel.c,roms.c},win32/fileselector.c}: use utils_safe_strdup where
         appropriate.
20120119 event.[ch],fuse.c: event_init() can never fail.
20120119 debugger/{debugger.[ch],debugger_internals.h,event.c,variable.c},
         fuse.c,memory.[ch],mempool.[ch],peripherals/{printer.[ch]},psg.[ch],
         spectrum.[ch]: more init functions that can never fail.
20120120 fuse.c,peripherals/disk/{beta.[ch],disciple.[ch],fdd.[ch],opus.[ch],
         plusd.[ch],upd_fdc.[ch],wd_fdc.[ch]}: yet more init functions that can
	 never fail.
20120121 ui/widget/{options.pl,pokemem.c,widget.c}: fix warnings.
20120121 fuse.c,machines/{pentagon.c,pentagon1024.c,pentagon512.c,scorpion.c,
         spec128.c,spec16.c,spec48.c,spec48_ntsc.c,spec_se.c,specplus2.c,
         specplus2a.c,specplus3.c,specplus3e.c,tc2048.c,tc2068.c,ts2068.c},
         pokefinder/pokefinder.[ch],spectrum.h,ui/gtk/pokefinder.c,
         ui/widget/pokefinder.c,ui/win32/pokefinder.c: fix pokefinder for
         Spectranet branch changes, fix breakpoint adding, limit RAM page
         search to active pages for the current machine (fixes bug #3470623)
         (Sergio Baldoví).
20120121 peripherals/{nic/w5100.c,spectranet.c},ui/gtk/pokemem.c: include
         <string.h> for memset template (Fred).
20120121 fuse.c,peripherals/{ay.[ch],fuller.[ch],if2.[ch],kempmouse.[ch],
         melodik.[ch],scld.[ch],speccyboot.[ch],specdrum.[ch],ula.[ch]},
         pokefinder/pokefinder.[ch],profile.[ch],slt.[ch],z80/z80.[ch]: even
         more init functions that cannot fail.
20120121 debugger/breakpoint.c,event.[ch],machine.c,peripherals/disk/beta.c,
         rzx.c,spectrum.c,tape.[ch],timer/timer.c: make event_add_with_data()
         just blow up if it can't allocate memory.
20120121 ui/win32/{debugger.c,debugger.rc}: various fixes for Win32 debugger
         memory map (patch #3476936) (Sergio).