@@ -4008,3 +4008,5 @@
          just blow up if it can't allocate memory.
 20120121 ui/win32/{debugger.c,debugger.rc}: various fixes for Win32 debugger
          memory map (patch #3476936) (Sergio).
+20120121 ui/win32/{binary.c,fileselector.c,options.pl,picture.c,roms.c}: fix
+         up Win32 for recent error handling changes (patch #3476971) (Sergio).
